--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -11,9 +11,9 @@
 
 	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
 		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-			</section>
+			{% block content %}
+
+			{% endblock %}
 		</div>
 	</body>
 </html>
