reusable form template cteated

--- a/shop/templates/product_form.html
+++ b/shop/templates/product_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="bg-gray-800">
-    
+<div>
+    {% include 'form.html' %}
 </div>
 {% endblock %}
