--- a/shop/templates/category_form.html
+++ b/shop/templates/category_form.html
@@ -1,10 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
-    <form method="post">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
-    </form>
+<div class="w-full">
+    {% include 'form.html' %}
 </div>
 {% endblock %}
