--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.field input, .field select {
+    border-radius: 10px;
+    width: auto;
+    color: black;
+}
+
+.errorlist {
+    color: red;
+}
+
