--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -2,15 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Django Tailwind</title>
+    <title>Ecom Classic</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
-		<div class="container mx-auto">
+	<body class="bg-gray-800">
+		<div class="my-52">
 			{% block content %}
 
 			{% endblock %}
