--- a/shop/templates/category_form.html
+++ b/shop/templates/category_form.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="w-full">
+<div class="w-full category-form flex flex-col items-center">
+    <h1 class="text-2xl text-white my-10">Add Category</h1>
     {% include 'form.html' %}
 </div>
 {% endblock %}
