--- a/shop/templates/product_form.html
+++ b/shop/templates/product_form.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
+<div class="w-full product-form flex flex-col items-center">
+
+    <h1 class="text-2xl text-white my-10">Add Product</h1>
     {% include 'form.html' %}
 </div>
 {% endblock %}
