--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -1,7 +1,55 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="shop">
+<div class="shop w-full">
+    <div class="paintigs relative text-white mt-20">
+        <h1 class="absolute top-0 left-0 text-2xl">Paintings</h1>
+        <div class="flex flex-col items-center md:flex-row flex-wrap relative top-10">
+            {% for product in object_list %}
+                {% if product.category.name == 'Painting' %}
+                    <div class="painting m-5 p-2 md:w-1/5 bg-slate-900 rounded-lg">
+                        
+                        <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-md">
+                        <div class="flex justify-between items-center">
+                            <div>
+                                <h2>{{product.name}}</h2>
+                                <p>ksh {{product.price}}</p>
+                                <p>{{product.inventory}} left</p>
+                            </div>
+                            <div class="cursor-pointer">
+                                <i class="uil uil-plus"></i>
+                                <i class="uil uil-shopping-cart"></i>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+
+    <div class="paintigs relative text-white mt-20">
+        <h1 class="absolute top-0 left-0 text-2xl">T-shirts</h1>
+        <div class="flex flex-col items-center md:flex-row flex-wrap relative top-10">
+            {% for product in object_list %}
+            {% if product.category.name == 'T-Shirt' %}
+            <div class="painting m-5 p-2 md:w-1/5 bg-slate-900 rounded-lg">
     
+                <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-md">
+                <div class="flex justify-between items-center">
+                    <div>
+                        <h2>{{product.name}}</h2>
+                        <p>ksh {{product.price}}</p>
+                        <p>{{product.inventory}} left</p>
+                    </div>
+                    <div class="cursor-pointer">
+                        <i class="uil uil-plus"></i>
+                        <i class="uil uil-shopping-cart"></i>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+    </div>
 </div>
 {% endblock %}
