--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,14 +3,16 @@
 <html lang="en">
 	<head>
     <title>Ecom Classic</title>
+		<!-- <script src="https://kit.fontawesome.com/bc4deb0f1d.js" crossorigin="anonymous" defer></script> -->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 		{% tailwind_css %}
 	</head>
 
 	<body class="bg-gray-800">
-		<div class="my-52">
+		<div class="">
 			{% block content %}
 
 			{% endblock %}
