--- a/shop/templates/product_per_category.html
+++ b/shop/templates/product_per_category.html
@@ -1,19 +1,26 @@
-{% for product in object_list %}
+{% extends 'base.html' %}
+{% load static %}
 
-<div class="painting m-5 p-2 md:w-1/5 bg-slate-900 rounded-lg">
-
-    <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-md">
-    <div class="flex justify-between items-center">
-        <div>
-            <h2>{{product.name}}</h2>
-            <p>ksh {{product.price}}</p>
-            <p>{{product.inventory}} left</p>
-        </div>
-        <div class="cursor-pointer">
-            <i class="uil uil-plus"></i>
-            <i class="uil uil-shopping-cart"></i>
+{% block content %}
+<div class="w-full h-screen overflow-y-hidden">
+    <div class="slide-show w-full">
+        <div id="carouselExampleSlidesOnly" class="carousel slide h-full" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="{% static 'backgrounds/purple-space.jpg' %}" class="d-block w-100 h-full" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="{% static 'backgrounds/earthfromspace.jpg' %}" class="d-block w-100 h-full" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="{% static 'backgrounds/milky-way.jpg' %}" class="d-block w-100 h-full" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="{% static 'backgrounds/space-junk.jpg' %}" class="d-block w-100 h-full" alt="...">
+                </div>
+            </div>
         </div>
     </div>
-</div>
 
-{% endfor %}
+</div>
+{% endblock %}
