--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="shop w-full">
+    {% include 'slide_show.html' %}
     <div class="paintigs relative text-white mt-20">
         <h1 class="absolute top-0 left-0 text-2xl">Paintings</h1>
         <div class="flex flex-col items-center md:flex-row flex-wrap relative top-10">
