--- a/templates/slide_show.html
+++ b/templates/slide_show.html
@@ -16,7 +16,7 @@
             </div>
         </div>
     </div >
-    <div class="quote relative bottom-28 sm:bottom-32 px-5 flex flex-col items-center">
+    <div class="text-white quote relative bottom-28 sm:bottom-32 px-5 flex flex-col items-center">
         <p>"Give every day the chance to become the most beautiful day of your life."</p>
         <p>-Mark Twain</p>
     </div>
