--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -3,54 +3,29 @@
 {% block content %}
 <div class="shop w-full">
     {% include 'slide_show.html' %}
-    <div class="paintigs relative text-white mt-20">
-        <h1 class="absolute top-0 left-0 text-2xl">Paintings</h1>
-        <div class="flex flex-col items-center md:flex-row flex-wrap relative top-10">
-            {% for product in object_list %}
-                {% if product.category.name == 'Painting' %}
-                    <div class="painting m-5 p-2 md:w-1/5 bg-slate-900 rounded-lg">
-                        
-                        <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-md">
-                        <div class="flex justify-between items-center">
-                            <div>
-                                <h2>{{product.name}}</h2>
-                                <p>ksh {{product.price}}</p>
-                                <p>{{product.inventory}} left</p>
-                            </div>
-                            <div class="cursor-pointer">
-                                <i class="uil uil-plus"></i>
-                                <i class="uil uil-shopping-cart"></i>
-                            </div>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-    </div>
+    {% include 'nav.html' %}
 
-    <div class="paintigs relative text-white mt-20">
-        <h1 class="absolute top-0 left-0 text-2xl">T-shirts</h1>
-        <div class="flex flex-col items-center md:flex-row flex-wrap relative top-10">
-            {% for product in object_list %}
-            {% if product.category.name == 'T-Shirt' %}
-            <div class="painting m-5 p-2 md:w-1/5 bg-slate-900 rounded-lg">
-    
-                <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-md">
-                <div class="flex justify-between items-center">
+    <div class="products p-5 md:p-20 flex flex-col items-center">
+        {% if latest_product %}
+            <div class="latest sm:flex">
+                <div class="md:w-96">
+                    <img src="{{latest_product.image_url}}" alt="latest_product" />
+                </div>
+                <div  class="m-4 sm:m-8 flex flex-col justify-between">
                     <div>
-                        <h2>{{product.name}}</h2>
-                        <p>ksh {{product.price}}</p>
-                        <p>{{product.inventory}} left</p>
+                        <h1 class="text-2xl">{{latest_product.name}}</h1>
+                        <p class="text-xl">ksh {{latest_product.price}}</p>
                     </div>
-                    <div class="cursor-pointer">
-                        <i class="uil uil-plus"></i>
-                        <i class="uil uil-shopping-cart"></i>
+                    <div class="m-2">
+                        <button class="border-2 flex group py-2 px-4 w-56">
+                            <p> Add to cart</p>
+                            <i class="uil uil-arrow-right group-hover:translate-x-14 group-hover:visible transform duration-300 ease-in-out ml-2"></i>
+                        </button>
                     </div>
                 </div>
             </div>
             {% endif %}
-            {% endfor %}
-        </div>
     </div>
+    
 </div>
 {% endblock %}
