--- a/shop/templates/product_per_category.html
+++ b/shop/templates/product_per_category.html
@@ -18,9 +18,9 @@
         </div>
         {% for product in object_list %}
         
-        <div class="hover:scale-125 transition duration-300 ease-in m-3 p-2 xl:w-60 bg-slate-900 rounded-lg h-fit text-white">
+        <div class="hover:scale-125 transition duration-300 ease-in m-3 p-2 xl:w-60 rounded-none h-fit text-black">
         
-            <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-md">
+            <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-none">
             <div class="flex justify-between items-center">
                 <div>
                     <h2>{{product.name}}</h2>
