--- a/shop/templates/product_per_category.html
+++ b/shop/templates/product_per_category.html
@@ -18,21 +18,7 @@
         </div>
         {% for product in object_list %}
         
-        <div class="hover:scale-125 transition duration-300 ease-in m-3 p-2 xl:w-60 rounded-none h-fit text-black">
-        
-            <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-none">
-            <div class="flex justify-between items-center">
-                <div>
-                    <h2>{{product.name}}</h2>
-                    <p>ksh {{product.price}}</p>
-                    <p>{{product.inventory}} left</p>
-                </div>
-                <div class="cursor-pointer">
-                    <i class="uil uil-plus"></i>
-                    <i class="uil uil-shopping-cart"></i>
-                </div>
-            </div>
-        </div>
+        {% include 'product.html' %}
         
         {% endfor %}
         
