all products page added

--- a/shop/templates/product_per_category.html
+++ b/shop/templates/product_per_category.html
@@ -10,7 +10,7 @@
         <div class="m-5">
             <div class="categories">
                 <ul>
-                    <li class="leading-2" ><a href="/shop/category/T-Shirt">All</a></li>
+                    <li class="leading-2" ><a href="/shop/products">All</a></li>
                     <li><a href="/shop/category/T-Shirt">T-Shirts</a></li>
                     <li><a href="/shop/category/Painting">Paintings</a></li>
                 </ul>
@@ -24,12 +24,5 @@
         
     </div>
 </div>
-<script defer>
-    const navIcon = document.getElementById('nav-icon')
-    const navItems = document.querySelector('.nav-items')
 
-    navIcon.addEventListener('click', () => {
-        navItems.classList.toggle('toggle')
-    })
-</script>
 {% endblock %}
