--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="shop w-full">
@@ -53,8 +54,15 @@
             </div>
             {% endif %}
 
-            <div>
-                
+            <div class="w-full flex mt-32 justify-center">
+                <div class="w-2/3 md:w-96 relative group">
+                    <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/artwork-display.jpg' %}" alt="">
+                    <p class="absolute bottom-5 left-3 font-bold text-2xl underline group-hover:scale-110 transition duration-300 ease-in-out">ARTWORKS</p>
+                </div>
+                <div class="w-1/3 md:w-64 relative group">
+                    <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/tshirts-display.jpg' %}" alt="">
+                    <p class="absolute bottom-24 left-3 font-bold text-2xl underline group-hover:scale-110 transition duration-300 ease-in-out">T-SHIRTS</p>
+                </div>
             </div>
     </div>
     
