--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -55,14 +55,18 @@
             {% endif %}
 
             <div class="w-full flex mt-32 justify-center">
-                <div class="w-2/3 md:w-96 relative group">
-                    <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/artwork-display.jpg' %}" alt="">
-                    <p class="absolute bottom-5 left-3 font-bold text-2xl underline group-hover:scale-110 transition duration-300 ease-in-out">ARTWORKS</p>
-                </div>
-                <div class="w-1/3 md:w-64 relative group">
-                    <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/tshirts-display.jpg' %}" alt="">
-                    <p class="absolute bottom-24 left-3 font-bold text-2xl underline group-hover:scale-110 transition duration-300 ease-in-out">T-SHIRTS</p>
-                </div>
+                <a href="/shop/category/Painting" class="hover:text-black">
+                    <div class="w-2/3 md:w-96 relative group">
+                        <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/artwork-display.jpg' %}" alt="">
+                        <p class="absolute bottom-5 left-3 font-bold text-2xl underline group-hover:scale-110 transition duration-300 ease-in-out">ARTWORKS</p>
+                    </div>
+                </a>
+                <a href="/shop/category/T-Shirt" class="hover:text-black">
+                    <div class="w-1/3 md:w-64 relative group">
+                        <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/tshirts-display.jpg' %}" alt="">
+                        <p class="absolute bottom-24 left-3 font-bold text-2xl underline group-hover:scale-110 transition duration-300 ease-in-out">T-SHIRTS</p>
+                    </div>
+                </a>
             </div>
     </div>
     
