product detail page created

--- a/templates/product.html
+++ b/templates/product.html
@@ -1,3 +1,4 @@
+<a href="/shop/product/{{product.id}}" class="hover:text-black">
 <div class="hover:scale-125 group transition duration-300 ease-in-out m-3 p-2 xl:w-60 rounded-none h-fit text-black">
 
     <img src="{{product.image_url}}" alt="{{product.name}}-image" class="w-full rounded-none group-hover:opacity-80 transition duration-300 ease-in">
@@ -13,3 +14,4 @@
         </div>
     </div>
 </div>
+</a>
