modify cart cookie function created

--- a/shop/templates/product_detail.html
+++ b/shop/templates/product_detail.html
@@ -21,9 +21,9 @@
             </div>
             
             <div class="m-2">
-                <button class="border-2 flex group py-2 px-4 w-56" data-id="{{product.id}}" data-action="add">
+                <button class="update-cart border-2 flex group py-2 px-4 w-56" data-id="{{product.id}}" data-action="add">
                     <p> Add to cart</p>
-                    <i class="uil uil-arrow-right group-hover:translate-x-14 group-hover:visible transform duration-300 ease-in-out ml-2"></i>
+                    <i class="uil uil-plus translate-x-14 group-hover:translate-x-0 transform duration-300 ease-in-out ml-2"></i>
                 </button>
             </div>
         </div>
