util function created to get cart from request cookies

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,6 @@
         <div class="transition duration-200 ease-in">
             <h1>Art Lounge</h1>
         </div>
-        
         <div class="nav-items">
             <ul class="flex justify-between">
                <a href="/shop" class="mr-10">Home</a>
@@ -15,11 +14,13 @@
                     </div>
                 </div>
                 <a href="#" class="search mr-10"><i class="uil uil-search"></i></a>
+                <i class="search uil uil-shopping-cart"></i>
             </ul>
         </div>
         <div class="nav-icon absolute right-8 ">
             <i class="uil uil-bars" id="nav-icon"></i>
-            <a href="#" class="mr-10"><i class="uil uil-search"></i></a>
+            <a href="#"><i class="uil uil-search"></i></a>
+            <i class="uil uil-shopping-cart"></i>
         </div>  
 </nav>
 
