--- a/shop/templates/product_detail.html
+++ b/shop/templates/product_detail.html
@@ -3,35 +3,41 @@
 
 {% block content %}
 
-<div class="p-5 md:p-20 flex flex-col items-center mt-32 md:mt-60">
-<div class="flex flex-col items-start">
-    <div class="back flex justify-start items-center cursor-pointer group my-10">
-        <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
-        <p class="ml-2">Continue shopping</p>
+<div class="p-5 md:p-20 flex flex-col items-center mt-32 md:mt-60 relative">
+    <div class="mini-cart absolute top-20 right-0">
+        
     </div>
-    <div class="latest sm:flex">
-        <div class="md:w-96">
-            <img src="{{product.image_url}}" alt="product" />
+    <div class="flex flex-col items-start">
+        <div class="back flex justify-start items-center cursor-pointer group my-10">
+            <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
+            <p class="ml-2">Continue shopping</p>
         </div>
-        <div  class="m-4 sm:m-8 flex flex-col justify-between">
-            <div>
-                <h1 class="text-2xl">{{product.name}}</h1>
-                <p class="text-xl">ksh {{product.price}}</p>
-                <hr/>
+        <div class="latest sm:flex ">
+            <div class="md:w-96">
+                <img src="{{product.image_url}}" alt="product" />
             </div>
-            
-            <div class="m-2">
-                <button class="update-cart border-2 flex group py-2 px-4 w-56" data-id="{{product.id}}" data-action="add">
-                    <p> Add to cart</p>
-                    <i class="uil uil-plus translate-x-14 group-hover:translate-x-0 transform duration-300 ease-in-out ml-2"></i>
-                </button>
+            <div  class="m-4 sm:m-8 flex flex-col justify-between">
+                <div>
+                    <h1 class="text-2xl">{{product.name}}</h1>
+                    <p class="text-xl">ksh {{product.price}}</p>
+                    <hr/>
+                </div>
+                
+                <div class="m-2">
+                    <button class="update-cart border-2 border-black flex justify-between items-center hover:scale-110 transform duration-300 ease-in-out group py-2 px-4 w-56" 
+                        data-productId={{product.id}} data-action="add">
+                        <p> Add to cart</p>
+                        <i class="text-xl uil uil-plus animate-pulse group-hover:animate-none transform duration-300 ease-in-out ml-2"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 <script>
     const backBtn = document.querySelector('.back')
     backBtn.addEventListener('click', () => history.back())
+    const product_id = "{{product.id}}"
+    console.log('id: ', product_id)
 </script>
 {% endblock %}
