--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="text-white nav absolute top-10 flex flex-row px-11 md:px-24 xl:px-64  justify-between w-full text-xl xl:text-2xl">
+<nav class=" nav absolute top-10 flex flex-row px-11 md:px-24 xl:px-64  justify-between w-full text-xl xl:text-2xl">
         <div class="transition duration-200 ease-in">
             <h1>Art Lounge</h1>
         </div>
@@ -14,13 +14,13 @@
                     </div>
                 </div>
                 <a href="#" class="search mr-10"><i class="uil uil-search"></i></a>
-                <i class="search uil uil-shopping-cart"></i>
+                <a href="/shop/cart" class="search"><i class="uil uil-shopping-cart"></i></a>
             </ul>
         </div>
         <div class="nav-icon absolute right-8 ">
             <i class="uil uil-bars" id="nav-icon"></i>
             <a href="#"><i class="uil uil-search"></i></a>
-            <i class="uil uil-shopping-cart"></i>
+            <a href="/shop/cart"><i class="uil uil-shopping-cart"></i></a>
         </div>  
 </nav>
 
