--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 {% block content %}
-<div class="shop w-full">
+<div class="shop w-full text-white">
     {% include 'slide_show.html' %}
     {% include 'nav.html' %}
 
     
 
-    <div class="products p-5 md:p-20 flex flex-col items-center">
+    <div class="products p-5 md:p-20 flex flex-col items-center text-black">
         {% if latest_product %}
             <div class="flex flex-col items-start">
 
