--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
                <a href="#" class="mr-10">About</a>
                 <div class="dropdown flex flex-col relative justify-between  mr-10">
                     <a href="#">Products <i class="uil uil-angle-double-down"></i></a>
-                    <div class="dropdown-items flex flex-col">
+                    <div class="dropdown-items flex flex-col items-end">
                         <a href="/shop/category/Painting">Paintings</a>
                         <a href="/shop/category/T-Shirt">T-Shirts</a>
                     </div>
