--- a/shop/templates/product_detail.html
+++ b/shop/templates/product_detail.html
@@ -2,11 +2,9 @@
 
 
 {% block content %}
-
+{% include 'nav.html' %}
 <div class="p-5 md:p-20 flex flex-col items-center mt-32 md:mt-60 relative">
-    <div class="mini-cart absolute top-20 right-0">
-        
-    </div>
+    
     <div class="flex flex-col items-start">
         <div class="back flex justify-start items-center cursor-pointer group my-10">
             <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
@@ -35,9 +33,6 @@
     </div>
 </div>
 <script>
-    const backBtn = document.querySelector('.back')
-    backBtn.addEventListener('click', () => history.back())
-    const product_id = "{{product.id}}"
-    console.log('id: ', product_id)
+
 </script>
 {% endblock %}
