--- a/templates/slide_show.html
+++ b/templates/slide_show.html
@@ -5,7 +5,7 @@
             <div class="carousel-item active">
                 <img src="{% static 'backgrounds/purple-space.jpg' %}" class="d-block w-100 h-full" alt="...">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
                 <img src="{% static 'backgrounds/earthfromspace.jpg' %}" class="d-block w-100 h-full" alt="...">
             </div>
             <div class="carousel-item">
