address and customer form created

--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -8,9 +8,17 @@
 
     <div class="relative top-36 md:px-16 xl:px-56 w-full flex flex-col items-start">
     {% if cart_items %}
-        <div class="font-bold text-xl">
-            <p>Items: {{cart.cart_items}}</p>
-            <p>Cart Total: {{cart.cart_total}}</p>
+        <div class="flex justify-between w-full">
+            <div class="text-xl">
+                <p>Items: {{cart.cart_items}}</p>
+                <p>Cart Total: {{cart.cart_total}}</p>
+            </div>
+            <div class="group w-1/2">
+                <a href="#" class="hover:text-black flex justify-center">
+                    <p class="mr-3">Checkout</p>
+                    <i class="uil uil-arrow-right group-hover:translate-x-4 transition duration-300 ease-in-out"></i>
+                </a>
+            </div>
         </div>
         {% for item in cart_items %}
         <div class="cart-item my-10 flex items-center justify-between p-3 w-full border border-black">
