--- a/templates/form.html
+++ b/templates/form.html
@@ -2,7 +2,7 @@
     {% csrf_token %}
 
     {% for field in form %}
-    <div class="field flex flex-col text-white text-xl my-2">
+    <div class="field flex flex-col text-black text-xl my-2">
         {{ field.errors }}
         {{ field.label_tag }} {{ field }}
         {% if field.help_text %}
