--- a/shop/templates/product_form.html
+++ b/shop/templates/product_form.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="w-full product-form flex flex-col items-center">
+<div class="w-full product-form flex flex-col items-center text-black">
 
-    <h1 class="text-2xl text-white my-10">Add Product</h1>
+    <h1 class="text-2xl  my-10">Add Product</h1>
     {% include 'form.html' %}
 </div>
 {% endblock %}
