--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -8,6 +8,13 @@
 
     <div class="relative top-36 md:px-16 xl:px-56 w-full flex flex-col items-start">
     {% if cart_items %}
+        <div class="flex pb-10">
+            <p class="font-semibold">Cart</p>
+            <i class="uil uil-angle-right"></i>
+            <p>Checkout</p>
+            <i class="uil uil-angle-right"></i>
+            <p>Payment</p>
+        </div>
         <div class="flex justify-between w-full">
             <div class="text-xl">
                 <p>Items: {{cart.cart_items}}</p>
