process order view created

--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -21,7 +21,7 @@
                 <p>Cart Total: {{cart.cart_total}}</p>
             </div>
             <div class="group w-1/2">
-                <a href="#" class="hover:text-black flex justify-center">
+                <a href="/shop/checkout" class="hover:text-black flex justify-center">
                     <p class="mr-3">Checkout</p>
                     <i class="uil uil-arrow-right group-hover:translate-x-4 transition duration-300 ease-in-out"></i>
                 </a>
