--- a/shop/templates/checkout.html
+++ b/shop/templates/checkout.html
@@ -48,7 +48,7 @@
                     <i class="uil uil-arrow-left text-2xl group-hover:-translate-x-10 transition duration-300 ease-in-out"></i>
                     <p class="ml-2">Back to cart</p>
                 </div>
-                <button class="bg-slate-900 text-white p-2 rounded-lg" type="submit">Proceed to payment</button>
+                <a href="/shop/process_order"><button class="bg-slate-900 text-white p-2 rounded-lg" type="submit">Proceed to payment</button></a>
             </div>
         </form>
     </div>
