--- a/shop/templates/confirm_payment.html
+++ b/shop/templates/confirm_payment.html
@@ -3,21 +3,30 @@
 {% block content %}
 <div class="flex justify-center">
    
-    {% if transaction and transaction.is_finished%}
+    {% if transaction and transaction.is_finished %}
 
-        {% if transaction.is_finished %}
-            <p>Transaction complete </p>
-        {% else %}
+        <div class="flex flex-col justify-center mt-20">
+            <p>Transaction complete</p>
+            <p>Amount: {{transaction.amount}} </p>
+            <p>Receipt No. {{transaction.receipt_number}} </p>
+        </div>
+    {% else %}
+    
         <div class="flex justify-center mt-20">
             <i class="uil uil-spinner animate-spin text-xl"></i>
             <p>Listening for your transaction</p>
         </div>
-        {% endif %}
-    {% else %}
-    
-    <p>No transaction </p>
 
     {% endif %}
 
 </div>
+<script>
+    const transactionComplete = '{{transaction.is_finished}}' == 'False' ? false : true
+
+    if (!transactionComplete) {
+        setTimeout(() => {
+            location.reload()
+        }, 10000);
+    }
+</script>
 {% endblock %}
