ADD: about page

--- a/shop/templates/product_per_category.html
+++ b/shop/templates/product_per_category.html
@@ -2,12 +2,12 @@
 
 
 {% block content %}
-<div class="w-full text-black relative">
+<div class="w-full text-white relative">
     {% include 'slide_show.html' %}
     {% include 'nav.html' %}
 
-    <div class="grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap products mx-10 sm:mx-20 md:mx-40 items-center">
-        <div class="m-5">
+    <div class="grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap products px-10 sm:px-20 md:px-40 items-center">
+        <div class="m-5 text-black">
             <div class="categories">
                 <ul>
                     <li class="leading-2" ><a href="/shop/products">All</a></li>
