--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -25,7 +25,7 @@
                     </div>
                     
                     <div class="m-2">
-                        <button class="border-2 flex group py-2 px-4 w-56">
+                        <button class="update-cart border-2 flex group py-2 px-4 w-56" data-productId={{latest_product.id}} data-action='add'>
                             <p> Add to cart</p>
                             <i class="uil uil-arrow-right group-hover:translate-x-14 group-hover:visible transform duration-300 ease-in-out ml-2"></i>
                         </button>
@@ -70,6 +70,8 @@
                     </div>
                 </a>
             </div>
+
+            
     </div>
     
 </div>
