--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
-<nav class=" nav absolute top-10 flex flex-row px-11 md:px-24 xl:px-64  justify-between w-full text-xl xl:text-2xl">
-        <div class="transition duration-200 ease-in">
+<nav class=" nav absolute top-10 flex flex-row px-11 md:px-16 xl:px-64  justify-between w-full text-xl xl:text-2xl">
+        <div class="logo transition duration-200 ease-in">
             <h1>Art Lounge</h1>
         </div>
         <div class="nav-items">
@@ -7,7 +7,7 @@
                <a href="/shop" class="mr-10">Home</a>
                <a href="#" class="mr-10">About</a>
                 <div class="dropdown flex flex-col relative justify-between  mr-10">
-                    <a href="#">Products <i class="uil uil-angle-double-down"></i></a>
+                    <a href="/shop/products">Products <i class="uil uil-angle-double-down"></i></a>
                     <div class="dropdown-items flex flex-col items-end">
                         <a href="/shop/category/Painting">Paintings</a>
                         <a href="/shop/category/T-Shirt">T-Shirts</a>
