--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,7 +5,7 @@
         <div class="nav-items">
             <ul class="flex justify-between">
                <a href="/shop" class="mr-10">Home</a>
-               <a href="#" class="mr-10">About</a>
+               <a href="/shop/about" class="mr-10">About</a>
                 <div class="dropdown flex flex-col relative justify-between  mr-10">
                     <a href="/shop/products">Products <i class="uil uil-angle-double-down"></i></a>
                     <div class="dropdown-items flex flex-col items-end">
