--- a/shop/templates/about.html
+++ b/shop/templates/about.html
@@ -9,7 +9,7 @@
     </div>
     <div class='w-full px-10 md:px-28 xl:px-52 flex flex-col items-start'>
         <h1 class='my-10 text-2xl font-semibold'>John Doe</h1>
-        <div class=''>
+        <div class='md:text-xl'>
             <div class='float-right top-0 right-0 w-1/2 md:w-72'>
                 <img src="{% static 'images/afrikan-woman.jpg' %}" alt="">
             </div>
