--- a/templates/footer.html
+++ b/templates/footer.html
@@ -35,7 +35,7 @@
             <button>Subscribe</button>
         </div>
     </div>
-    <div class='flex justify-center'>
+    <div class='flex justify-center mt-10'>
         <i class="uil uil-copyright"></i>
         <p>ArtLonge2022</p>
     </div>
