--- a/templates/nav.html
+++ b/templates/nav.html
@@ -14,13 +14,19 @@
                     </div>
                 </div>
                 <a href="#" class="search mr-10"><i class="uil uil-search"></i></a>
-                <a href="/shop/cart" class="search"><i class="uil uil-shopping-cart"></i></a>
+                <a href="/shop/cart" class="search flex">
+                    <i class="uil uil-shopping-cart"></i>
+                    <p class="cart_items text-red-600 text-xs"></p>
+                </a>
             </ul>
         </div>
         <div class="nav-icon absolute right-8 ">
             <i class="uil uil-bars" id="nav-icon"></i>
             <a href="#"><i class="uil uil-search"></i></a>
-            <a href="/shop/cart"><i class="uil uil-shopping-cart"></i></a>
+            <a href="/shop/cart">
+                <i class="uil uil-shopping-cart"></i>
+                <p class="cart_items text-red-600"></p>
+            </a>
         </div>  
 </nav>
 
