ADD: messace class

--- a/shop/templates/product_per_category.html
+++ b/shop/templates/product_per_category.html
@@ -23,6 +23,9 @@
         {% endfor %}
         
     </div>
+    <div class="relative mt-20">
+        {% include 'footer.html' %}
+    </div>
 </div>
 
 {% endblock %}
