--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,7 +15,7 @@
                 <a href="#">@artlonge</a>
             </div>
         </div>
-        <div class="site-map flex flex-col items-start md:ml-20 xl:ml-52 m-2">
+        <div class="site-map flex flex-col flex-wrap items-start md:ml-20 xl:ml-52 m-2">
             <a href="/shop">Home</a>
             <a href="/shop/about">About</a>
             <a href="/shop/products">Products</a>
