ADD: contact us page

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -21,7 +21,7 @@
             <a href="/shop/products">Products</a>
             <a href="/shop/cart">Cart</a>
             <a href="/shop/products#search"></a>
-            <a href="#">Coutact us</a>
+            <a href="/shop/contact">Coutact us</a>
             <a href="#">Shipping policy</a>
             <a href="#">Privacy policy</a>
             <a href="#">Refund policy</a>
