REFACTOR: product per category page styling

--- a/shop/templates/product_per_category.html
+++ b/shop/templates/product_per_category.html
@@ -6,7 +6,7 @@
     {% include 'slide_show.html' %}
     {% include 'nav.html' %}
 
-    <div class="grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap products px-10 sm:px-20 md:px-40 items-center">
+    <div class="pb-32 grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap products px-10 sm:px-20 md:px-40 items-center">
         <div class="m-5 text-black">
             <div class="categories">
                 <ul>
