--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -54,23 +54,23 @@
             {% endif %}
 
             <div class="w-full flex mt-32 justify-center">
-                <a href="/shop/category/Painting" class="hover:text-black">
-                    <div class="w-2/3 md:w-96 relative group">
+                <a href="/shop/category/Painting" class="hover:text-black w-2/3 md:w-96">
+                    <div class="relative group">
                         <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/artwork-display.jpg' %}" alt="">
-                        <p class="absolute bottom-5 left-3 font-bold text-2xl underline group-hover:scale-110 transition duration-300 ease-in-out">ARTWORKS</p>
+                        <p class="absolute bottom-5 left-3 font-bold  underline group-hover:scale-110 transition duration-300 ease-in-out">ARTWORKS</p>
                     </div>
                 </a>
-                <a href="/shop/category/T-Shirt" class="hover:text-black">
-                    <div class="w-1/3 md:w-64 relative group">
+                <a href="/shop/category/T-Shirt" class="hover:text-black w-1/3 md:w-64">
+                    <div class="relative group">
                         <img class="group-hover:opacity-50 transition duration-300 ease-in-out" src="{% static 'backgrounds/tshirts-display.jpg' %}" alt="">
-                        <p class="absolute bottom-24 left-3 font-bold text-2xl underline group-hover:scale-110 transition duration-300 ease-in-out">T-SHIRTS</p>
+                        <p class="absolute bottom-5 left-3 font-bold underline group-hover:scale-110 transition duration-300 ease-in-out">T-SHIRTS</p>
                     </div>
                 </a>
-            </div>
-           
+            </div> 
     </div>
-    <div class="relative mt-20">
+    <div class="relative mt-44">
         {% include 'footer.html' %}
     </div>
 </div>
+    
 {% endblock %}
