--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="footer flex flex-col bg-zinc-900 w-full text-white absolute bottom-0 p-10 h-fit" id="footer">
-    <div class="flex flex-col md:flex-row items-start md:items-center justify-between">
+    <div class="flex flex-col md:flex-row items-start md:items-start justify-between">
         <div class="social flex md:flex-col">
             <div class='my-2'>
                 <i class="uil uil-instagram"></i>
@@ -15,16 +15,20 @@
                 <a href="#">@artlonge</a>
             </div>
         </div>
-        <div class="site-map flex flex-col flex-wrap items-start md:ml-20 xl:ml-52 m-2">
-            <a href="/shop">Home</a>
-            <a href="/shop/about">About</a>
-            <a href="/shop/products">Products</a>
-            <a href="/shop/cart">Cart</a>
-            <a href="/shop/products#search"></a>
-            <a href="/shop/contact">Coutact us</a>
-            <a href="#">Shipping policy</a>
-            <a href="#">Privacy policy</a>
-            <a href="#">Refund policy</a>
+        <div class="site-map flex flex-col md:flex-row flex-wrap items-start md:ml-20 xl:ml-52 m-2">
+            <div class="flex flex-col p-2 md:p-12">
+                <a href="/shop">Home</a>
+                <a href="/shop/about">About</a>
+                <a href="/shop/products">Products</a>
+                <a href="/shop/cart">Cart</a>
+                <a href="/shop/products#search">Find product</a>
+            </div>
+            <div class="flex flex-col p-2 md:p-12">
+                <a href="/shop/contact">Coutact us</a>
+                <a href="#">Shipping policy</a>
+                <a href="#">Privacy policy</a>
+                <a href="#">Refund policy</a>
+            </div>
         </div>
         <div class='flex flex-col items-start m-2'>
             <div class='flex py-1'>
