--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,4 @@
-<form action="#"  enctype="multipart/form-data" method="POST" class="flex flex-col items-center">
+<form action="#"  enctype="multipart/form-data" method="POST" class="flex flex-col items-start">
     {% csrf_token %}
 
     {% for field in form %}
