--- a/templates/slide_show.html
+++ b/templates/slide_show.html
@@ -1,19 +1,19 @@
 {% load static %}
-<div class="slide-show w-full flex flex-col items-center h-screen">
+<div class="slide-show w-full flex flex-col items-center -z-10">
     <div id="carouselExampleSlidesOnly" class="carousel slide w-full" data-bs-ride="carousel">
         <div class="carousel-inner">
             <!-- <div class="carousel-item active">
                 <img src="{% static 'backgrounds/purple-space.jpg' %}" class="d-block w-100 h-full" alt="...">
             </div> -->
             <div class="carousel-item active">
-                <img src="{% static 'backgrounds/earthfromspace.jpg' %}" class="d-block w-100 h-full" alt="...">
+                <img src="{% static 'backgrounds/artistic-pattern.jpg' %}" class="d-block w-100 h-full" alt="...">
             </div>
             <!-- <div class="carousel-item">
                 <img src="{% static 'backgrounds/milky-way.jpg' %}" class="d-block w-100 h-full" alt="...">
             </div> -->
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
                 <img src="{% static 'backgrounds/space-junk.jpg' %}" class="d-block w-100 h-full" alt="...">
-            </div>
+            </div> -->
         </div>
     </div >
     <div class="text-white quote relative bottom-28 sm:bottom-32 px-5 flex flex-col items-center">
