REFACTOR: home page styling

--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -2,10 +2,10 @@
 {% load static %}
 
 {% block content %}
-<div class="shop w-full text-white">
+<div class="shop w-full text-white relative h-fit">
     {% include 'slide_show.html' %}
     {% include 'nav.html' %}
-    <div class="products p-5 md:p-20 flex flex-col items-center text-black">
+    <div class="products px-3 md:px-20 flex flex-col items-center text-black pb-64 md:pb-44 xl:pb-10 h-fit ">
         {% if latest_product %}
             <div class="flex flex-col items-start">
 
@@ -37,7 +37,7 @@
             <div class="flex flex-col items-center mt-40">
                 <h1 class="text-2xl p-10 underline">Best sellers</h1>
 
-                <div class="best-sellers grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap px-10 sm:px-20 md:px-40 items-center">
+                <div class="best-sellers grid grid-cols-2 md:grid-cols-3 xl:flex xl:flex-row xl:flex-wrap sm:px-20 md:px-40 items-center">
                     {% for product in best_sellers %}
         
                     {% include 'product.html' %}
@@ -68,8 +68,9 @@
                 </a>
             </div> 
     </div>
-    <div class="relative mt-44">
-        {% include 'footer.html' %}
+    <div class="relative mt-80 md:mt-40">
+    {% include 'footer.html' %}
+
     </div>
 </div>
     
